--- a/WEB/src/main/webapp/WEB-INF/web.xml
+++ b/WEB/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,24 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+
+	<!-- 서블릿 정보 등록 -->
+  <servlet>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<servlet-class>HelloServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>LifeCycleCheck</servlet-name>
+  	<servlet-class>LifeCycleServlet</servlet-class>
+  </servlet>
+  
+  <!-- 서블릿 매핑 정보 등록 -->
+  <servlet-mapping>
+  	<servlet-name>MyFirstServlet</servlet-name>
+  	<url-pattern>/hs</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>LifeCycleCheck</servlet-name>
+  	<url-pattern>/life</url-pattern>
+  </servlet-mapping>
 </web-app>
